# com.391

./: README.md
Project/aur/: CMakeLists.txt
Project/aur (copy)/: CMakeLists.txt
Project/aur (copy)/cmake/: FindSDL2_image.cmake
Project/aur (copy)/include/geometries/: es2_geometry.hpp
Project/aur (copy)/include/materials/: es2_constant_material.hpp
Project/aur (copy)/include/objects/: object.hpp
Project/aur (copy)/include/renderer/: es2_renderer.hpp  es2_shader.hpp
Project/aur (copy)/include/textures/: es2_texture.hpp
Project/aur (copy)/include/utilities/: utilities.hpp
Project/aur (copy)/include/window/: sdl_window.hpp  window.hpp
Project/aur (copy)/tests/: general_usage_test.cpp  material_properties_test.cpp
Project/aur/game/: Enemy.hpp  GameCharacter.hpp  GameProject.cpp  Player.hpp  RoomComponent.hpp
Project/aur/include/: aur.hpp
Project/aur/include/materials/: es2_phong_material.hpp
Project/aur/include/math/: sphere.hpp
Project/aur/include/window/: sdl_window.hpp  window.hpp
Project/aur/tests/: general_usage_test.cpp  textured_plane_test.cpp
lab01/: CMakeLists.txt  lab01.cpp
lab02/: CMakeLists.txt  lab02.cpp
lab03/: CMakeLists.txt  es2_constant_material.hpp  es2_geometry.hpp  es2_renderer.hpp  es2_shader.hpp  lab03.cpp  sdl_window.hpp  utilities.hpp
lab04/data/shaders/: es2_constant_shader.vert
lab04/include/geometries/: es2_geometry.hpp
lab04/include/materials/: es2_constant_material.hpp
lab04/include/renderer/: es2_renderer.hpp  es2_shader.hpp
lab04/include/window/: sdl_window.hpp
lab05/: CMakeLists.txt  main.cpp
lab05/cmake/: FindGLM.cmake  FindSDL2.cmake  README.md
lab05/data/shaders/: es2_constant_shader.frag  es2_constant_shader.vert
lab05/include/geometries/: es2_geometry.hpp
lab05/include/materials/: es2_constant_material.hpp
lab05/include/renderer/: es2_renderer.hpp  es2_shader.hpp
lab05/include/window/: sdl_window.hpp
lab06/: CMakeLists.txt
lab06/include/geometries/: es2_geometry.hpp
lab06/include/materials/: es2_constant_material.hpp  es2_phong_material.hpp
lab06/include/renderer/: es2_renderer.hpp  es2_shader.hpp
lab06/include/textures/: es2_texture.hpp
lab06/include/window/: sdl_window.hpp
lab06/tests/: geometries_test.cpp  lighting_test.cpp  scene_graph_test.cpp  triangle_test.cpp  window_test.cpp
lab07 (copy)/: CMakeLists.txt  conanfile.txt
lab07 (copy)/data/shaders/: es2_phong_shader.frag  es2_phong_shader.vert
lab07 (copy)/include/geometries/: es2_geometry.hpp
lab07 (copy)/include/materials/: phong_material.hpp
lab07 (copy)/include/renderer/: es2_renderer.hpp  es2_shader.hpp
lab07 (copy)/include/textures/: es2_texture.hpp
lab07 (copy)/include/window/: sdl_window.hpp
lab07 (copy)/tests/: normal_test.cpp
lab07/include/geometries/: geometry.hpp  geometry_generators.hpp  vertex.hpp
lab07/include/materials/: es2_constant_material.hpp  es2_phong_material.hpp
lab07/tests/: normal_test.cpp  texture_test.cpp  textured_plane_test.cpp  window_test.cpp
lab08/: CMakeLists.txt
lab08/cmake/: FindGLEW.cmake
lab08/include/: aur.hpp
lab08/include/materials/: es2_constant_material.hpp  es2_phong_material.hpp
lab08/include/renderer/: es2_renderer.hpp
lab08/include/window/: sdl_window.hpp
